# api/docs/swagger.json
@@ -9,6 +9,11 @@
     "paths": {
         "/student": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "This api create a student and returns its id",
                 "consumes": [
                     "application/json"
@@ -647,6 +652,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
